Move html generation to handler